# ruspi_microscope

./: .gitignore  1715551746.792949python_image_stitch.jpg.pp3  Cargo.toml  README.md  a.tif  a_o_microscope.json  a_o_microscope_brand.json  a_o_microscope_objective.json  audiotest.sh  autogenerate.js  autogenerate_compile_and_run.sh  build.rs  build_and_run.sh  cert.pem  denojs_webserver.js  development_plan.md  ensure_requirements.sh  generate_microbehunter_forum_posts.js  image_stitch.py  key.pem  lsusb.txt  lsusb_minus_v_tmp.txt  make_ssl_certificates.sh  o_config.default.json  o_config.json  o_config_1f27f6914ffc6de5fccb4e082045f8a7dd141ae9.json  o_config_2db759ca1774b65868afe6b551d29151befe4324.json  o_config_5fce965f6f4730407310a932d73130f2dc91cc3c.json  o_config_bac381b6b2aff2b582ed3a9a66e1bc84f85ed7fe.json  o_info.json  read_usb_camera.module.js  request.csr  stream.m3u8  stream0.ts  stream1.ts  stream2.ts  stream3.ts
image_stitching/: image_alignment_stitch.py  image_stitch.py  image_stitch_better_questionmark.py  new.py  python_image_align.py  python_image_align2.py  python_image_align_stitch.py  readme.md  sift.py  stitching.py
public/: autogenerated.module.js  captured_image.cr2.xmp  classes.module.js  functions.module.js  gphoto.html  gphoto.sh  index.html  old_unused.module.js  read_usb_camera.module.js  shader.html  shader.js  shaders.glsl  stream.m3u8  svgtest.html  test_websocket.html  test_websocket.js  tmp.css  tmp.xml
src/: background_thread_mre_minimal_runnable_example.rs  classes.rs  main.rs  runtimedata.rs  tmp.js  (+1 more)
stacktest/: command.sh
(+12 files in other folders)
