[package]
name = "gpio_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1" # Check for the latest version on crates.io
# read usb with rust
rusb = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
tungstenite = "0.16"
futures = "0.3"
warp = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
base64 = "0.13"  # Check for the latest version on crates.io
image = "0.23"
data-url = "0.3.1"