[package]
name = "gpio_project"
version = "0.1.0"
edition = "2021"

default-run = "main"  # The name of your main binary


[[bin]]
name = "main"
path = "src/bin/main.rs"





# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1" # Check for the latest version on crates.io
# read usb with rust
rusb = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
tungstenite = "0.16"
futures = "0.3"
warp = { version = "0.3", features = ["tls"] }
tokio-rustls = "0.23.1"
rustls = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
base64 = "0.13"  # Check for the latest version on crates.io
image = "0.23"
data-url = "0.3.1"
blurz = "0.4.0"
gethostname = "0.4.3"
#rustls-pemfile = "0.2.3"  # Add this line
rustls-pemfile = "2.1.2"
dataurl = "0.1.2"

